# cpp-22

./: .gitignore  README.md
kt1/: Makefile  asfalt.cpp  asfalt.h  lauljad.h  lauljad.txt  main.cpp  videod.cpp  videod.h
prax1/: main.cpp
prax10/: Makefile  main.cpp
prax11/: Makefile  main.cpp  peidetud.hpp
prax12/: CMakeLists.txt  main.cpp
prax13/: CMakeLists.txt  main.cpp
prax2/: main.cpp
prax3/: main.cpp
prax4/: main.cpp
prax5/: Makefile  PahupidiArv.cpp  PahupidiArv.h  main.cpp
prax6/: Makefile  main.cpp  osalejad_tulemused.cpp  osalejad_tulemused.h  tulemused.txt
prax8/: Makefile  main.cpp
prax9/: Makefile  main.cpp  raamat.cpp  raamat.h
